--- a/beer-service/application-local.properties
+++ b/beer-service/application-local.properties
@@ -2,7 +2,9 @@ spring.datasource.username=beer_service
 spring.datasource.password=password
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/beerservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+#create, create-drop, none, update, validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.datasource.hikari.maximum-pool-size=5
